--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "ios": "react-native run-ios",
         "lint": "eslint .",
         "start": "react-native start",
-        "test": "jest"
+        "test": "jest --no-coverage"
     },
     "dependencies": {
         "@babel/preset-react": "^7.22.5",
