--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@tsconfig/react-native": "^3.0.0",
         "@types/react": "^18.0.24",
         "@types/react-test-renderer": "^18.0.0",
+        "@types/jest": "29.4.0",
         "babel-jest": "^29.2.1",
         "eslint": "^8.19.0",
         "eslint-plugin-prettier": "^3.1.1",
