--- a/.gitignore
+++ b/.gitignore
@@ -56,14 +56,14 @@ yarn-error.log
 *.jsbundle
 
 # Ruby / CocoaPods
-/ios/Pods/
-/vendor/bundle/
+ios/Pods/
+vendor/bundle/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
 # testing
-/coverage
+coverage
 
 # others
 .vscode/
