--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dependencies": {
         "@babel/preset-react": "^7.22.5",
         "@testing-library/react-native": "^12.2.0",
+        "axios": "^1.4.0",
         "react": "18.2.0",
-        "react-native": "0.72.3"
+        "react-native": "0.72.3",
+        "styled-components": "6.0.7"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
@@ -22,9 +24,9 @@
         "@react-native/eslint-config": "^0.72.2",
         "@react-native/metro-config": "^0.72.9",
         "@tsconfig/react-native": "^3.0.0",
+        "@types/jest": "29.4.0",
         "@types/react": "^18.0.24",
         "@types/react-test-renderer": "^18.0.0",
-        "@types/jest": "29.4.0",
         "babel-jest": "^29.2.1",
         "eslint": "^8.19.0",
         "eslint-plugin-prettier": "^3.1.1",
