--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@babel/preset-react": "^7.22.5",
+        "@testing-library/react-hooks": "^8.0.1",
         "@testing-library/react-native": "^12.2.0",
         "axios": "^1.4.0",
         "react": "18.2.0",
