--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "babel-jest": "^29.2.1",
         "eslint": "^8.19.0",
         "eslint-plugin-prettier": "^3.1.1",
+        "husky": "4",
         "jest": "^29.2.1",
         "jest-environment-jsdom": "^29.6.2",
         "metro-react-native-babel-preset": "0.76.7",
@@ -40,5 +41,10 @@
     },
     "engines": {
         "node": ">=16"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "yarn lint && yarn test"
+        }
     }
 }
