--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
         "android": "react-native run-android",
         "ios": "react-native run-ios",
         "lint": "eslint .",
+        "lint:staged": "yarn lint-staged",
         "start": "react-native start",
-        "test": "jest --no-coverage"
+        "test": "jest --no-coverage",
+        "test:staged": "node scripts/runTestsForChangedFiles.js"
     },
     "dependencies": {
         "@babel/preset-react": "^7.22.5",
@@ -32,20 +34,19 @@
         "babel-jest": "^29.2.1",
         "eslint": "^8.19.0",
         "eslint-plugin-prettier": "^3.1.1",
-        "husky": "4",
+        "husky": "^8.0.0",
         "jest": "^29.2.1",
         "jest-environment-jsdom": "^29.6.2",
+        "lint-staged": "^14.0.0",
         "metro-react-native-babel-preset": "0.76.7",
         "prettier": "^2.4.1",
         "react-test-renderer": "18.2.0",
         "typescript": "4.8.4"
     },
+    "lint-staged": {
+        "*.js": "eslint "
+    },
     "engines": {
         "node": ">=16"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "yarn lint && yarn test"
-        }
     }
 }
