--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "axios": "^1.4.0",
         "react": "18.2.0",
         "react-native": "0.72.3",
+        "react-native-linear-gradient": "^2.8.2",
         "styled-components": "6.0.7"
     },
     "devDependencies": {
