--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@testing-library/react-hooks": "^8.0.1",
         "@testing-library/react-native": "^12.2.0",
         "axios": "^1.4.0",
+        "jotai": "^2.3.1",
         "react": "18.2.0",
         "react-native": "0.72.3",
         "react-native-linear-gradient": "^2.8.2",
