--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react": "18.2.0",
         "react-native": "0.72.3",
         "react-native-linear-gradient": "^2.8.2",
+        "react-native-svg": "^13.13.0",
         "styled-components": "6.0.7"
     },
     "devDependencies": {
