--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
         "@types/react": "^18.0.24",
         "@types/react-test-renderer": "^18.0.0",
         "babel-jest": "^29.2.1",
+        "babel-plugin-jsx-control-statements": "^4.1.2",
         "eslint": "^8.19.0",
+        "eslint-plugin-jsx-control-statements": "^3.0.0",
         "eslint-plugin-prettier": "^3.1.1",
         "husky": "^8.0.0",
         "jest": "^29.2.1",
