--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dependencies": {
         "@babel/preset-react": "^7.22.5",
         "@react-native-async-storage/async-storage": "^1.19.1",
+        "@react-navigation/native": "^6.1.7",
+        "@react-navigation/native-stack": "^6.9.13",
         "@testing-library/react-hooks": "^8.0.1",
         "@testing-library/react-native": "^12.2.0",
         "axios": "^1.4.0",
@@ -23,6 +25,8 @@
         "react-native": "0.72.3",
         "react-native-linear-gradient": "^2.8.2",
         "react-native-permissions": "^3.8.4",
+        "react-native-safe-area-context": "^4.7.1",
+        "react-native-screens": "^3.24.0",
         "react-native-svg": "^13.13.0",
         "styled-components": "6.0.7"
     },
