--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "jotai": "^2.3.1",
         "react": "18.2.0",
         "react-native": "0.72.3",
+        "react-native-geolocation-service": "^5.3.1",
         "react-native-linear-gradient": "^2.8.2",
         "react-native-permissions": "^3.8.4",
         "react-native-safe-area-context": "^4.7.1",
