--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,11 @@ end
 target 'mobile' do
   config = use_native_modules!
 
+  
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways/Permission-LocationAlways.podspec"
+  pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse/Permission-LocationWhenInUse.podspec"
+
   # Flags change depending on the env values.
   flags = get_default_flags()
 
