--- a/ios/mobile/Info.plist
+++ b/ios/mobile/Info.plist
@@ -35,8 +35,15 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Granting location permission enables us to provide accurate weather conditions for your current location.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Granting location permission enables us to provide accurate weather conditions for your current location.</string>
+    <key>NSLocationUsageDescription</key>
+    <string>Granting location permission enables us to provide accurate weather conditions for your current location.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Granting location permission enables us to provide accurate weather conditions for your current location.</string>
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
