--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-native": "0.72.3",
         "react-native-geolocation-service": "^5.3.1",
         "react-native-linear-gradient": "^2.8.2",
+        "react-native-modal": "^13.0.1",
         "react-native-permissions": "^3.8.4",
         "react-native-safe-area-context": "^4.7.1",
         "react-native-screens": "^3.24.0",
