--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "react-native-safe-area-context": "^4.7.1",
         "react-native-screens": "^3.24.0",
         "react-native-svg": "^13.13.0",
-        "styled-components": "6.0.7"
+        "styled-components": "6.0.7",
+        "tiny-emitter": "^2.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
