--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,15 +89,19 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file(String.valueOf(System.getenv("WEATHER_APP_KEYSTORE")))
+            storePassword System.getenv("WEATHER_APP_KEYSTORE_PASSWORD")
+            keyAlias System.getenv("WEATHER_APP_RELEASE_KEY_ALIAS")
+            keyPassword System.getenv("WEATHER_APP_RELEASE_KEY_PASSWORD")
+        }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
