--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react": "18.2.0",
         "react-native": "0.72.3",
         "react-native-config": "^1.5.1",
+        "react-native-device-info": "^10.11.0",
         "react-native-geolocation-service": "^5.3.1",
         "react-native-linear-gradient": "^2.8.2",
         "react-native-modal": "^13.0.1",
