--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "@testing-library/react-hooks": "^8.0.1",
         "@testing-library/react-native": "^12.2.0",
         "axios": "^1.4.0",
+        "commitizen": "^4.3.0",
+        "git-cz": "^4.9.0",
         "jotai": "^2.3.1",
         "react": "18.2.0",
         "react-native": "0.72.3",
@@ -44,6 +46,7 @@
         "@babel/core": "^7.20.0",
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
+        "@commitlint/cli": "^17.7.2",
         "@react-native/eslint-config": "^0.72.2",
         "@react-native/metro-config": "^0.72.9",
         "@tsconfig/react-native": "^3.0.0",
@@ -69,5 +72,10 @@
     },
     "engines": {
         "node": ">=16"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/git-cz"
+        }
     }
 }
